<resources>
    <string name="app_name">FastFillCustomer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">返回</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="new_user_name">姓名</string>
    <string name="new_user_phone">電話</string>
    <string name="new_user_birthday">生日</string>
    <string name="new_user_advance_payment">預付</string>
    <string name="new_user_et_desc">備注</string>
    <string name="new_user_et_work">職業</string>
    <string name="new_user_et_home">家庭</string>
    <string name="new_user_save">儲存/更新</string>

    <string name="new_order_wash">洗髮金額</string>
    <string name="new_order_cut">剪髮金額</string>
    <string name="new_order_perm">燙髮金額</string>
    <string name="new_order_dye">染髮金額</string>
    <string name="new_order_care">護髮金額</string>

    <string name="new_order_product_title">產品：</string>
    <string name="new_order_product_desc">買的產品內容</string>
    <string name="new_order_product_cost">產品總金額</string>
    <string name="write_all_to_save">要寫好全部才可以存哦</string>
</resources>
